--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-helloworld
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Diane Turpin</title>
+    <link href="main.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+  </head>
+  
+  <body>
+      <p>
+        <h1><i>Diane Hudson Turpin</i></h1>
+      </p>
+  </body>
+  
+</html>
