initializing header and menu

--- a/index.html
+++ b/index.html
@@ -3,13 +3,28 @@
   <head>
     <title>Diane Turpin</title>
     <link href="main.css" rel="stylesheet">
+    <script src="main.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
   </head>
   
   <body>
+    <div id="menu">
+      <a href="javascript:void(0);"><img src="hamburger.png" id="hamburgerIcon" onclick="toggleMenu()"/></a>
+      <div id="links">
+        <a href="about.html">About Me</a><br/>
+        <a href="experience.html">Experience</a><br/>
+      </div>
+    </div>
+    <br/>
+    <div id="header">
       <p>
-        <h1><i>Diane Hudson Turpin</i></h1>
+        <a href="index.html"><img src="diane_turpin.png" id="profileImage"/></a>
       </p>
+      <p>
+        <i><h1>Diane Turpin</h1><i>
+      </p>
+  </div>
+
   </body>
   
 </html>
