--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
     <div id="menu">
       <a href="javascript:void(0);"><img src="icons/hamburger.png" id="hamburgerIcon" onclick="toggleMenu()"/></a>
       <div id="links">
-        <a href="about.html">Who Am I?</a><br/>
+        <a href="aboutme.html">Who Am I?</a><br/>
         <a href="experience.html">Experience</a><br/>
         <a href="skills.html">Skills</a><br/>
         <a href="contact.html">Contact</a><br/>
@@ -26,6 +26,17 @@
       <p>
         <h1>Diane Turpin</h1>
       </p>
+    </div>
+
+    <div id="aboutMeSectionOne">
+    	<div id="aboutMeSectionOneText">
+    		Dog mom to Beanie <img src="beanie.png" id="beanie"/>
+    	</div>
+    </div>
+    <div id="aboutMeSectionTwo">
+    	<div id="aboutMeSectionTwoText">
+    		Family:
+    	</div>
     </div>
 
 
