--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="menu">
       <a href="javascript:void(0);"><img src="icons/hamburger.png" id="hamburgerIcon" onclick="toggleMenu()"/></a>
       <div id="links">
-        <a href="about.html">Who Am I?</a><br/>
+        <a href="aboutme.html">Who Am I?</a><br/>
         <a href="experience.html">Experience</a><br/>
         <a href="skills.html">Skills</a><br/>
         <a href="contact.html">Contact</a><br/>
