adding about me, experience, skills, contact pages

--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,7 @@
   <head>
     <title>Diane Turpin</title>
     <link href="main.css" rel="stylesheet">
+    <link href="aboutme.css" rel="stylesheet">
     <script src="main.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="icons/fruit.png"/>
@@ -28,14 +29,58 @@
       </p>
     </div>
 
-    <div id="aboutMeSectionOne">
-    	<div id="aboutMeSectionOneText">
-    		Dog mom to Beanie <img src="beanie.png" id="beanie"/>
+    <div id="beanieSection" class="aboutMeSection">
+    	<div id="beanieSectionText">
+    		<img src="icons/dogheart.png" class="aboutMeImage"/>
+    		<img src="icons/pawprint.png" class="aboutMeImage"/>
+    		<img src="beanie.png" class="aboutMeImage"/>
+    		<img src="icons/pawprint.png" class="aboutMeImage"/>
+    		<img src="icons/dogheart.png" class="aboutMeImage"/>
+    		<br/><br/>
+    		I'm a dog mom to Beanie 
     	</div>
     </div>
-    <div id="aboutMeSectionTwo">
-    	<div id="aboutMeSectionTwoText">
-    		Family:
+    <br/><br/><br/>
+    <div id="rollerDerbySection" class="aboutMeSection">
+    	<div id="rollerDerbySectionText">
+    		<img src="icons/skate-1.png" class="aboutMeImage"/>
+    		<img src="icons/skate-2.png" class="aboutMeImage"/>
+    		<img src="icons/skate-3.png" class="aboutMeImage"/>
+    		<br/><br/>
+    		I recently joined roller derby!
+    	</div>
+    </div>
+    <br/><br/><br/>
+    <div id="rubiksCubeSection" class="aboutMeSection">
+    	<div id="rubiksCubeSectionText">
+    		<img src="icons/wing.png" class="aboutMeImage"/>
+    		<img src="icons/cube.png" class="aboutMeImage"/>
+    		<img src="icons/wing.png" class="aboutMeImage"/>
+    		<br/><br/>
+    		I speed solve Rubik's cubes and my record is 27 seconds
+    	</div>
+    </div>
+    <br/><br/><br/>
+    <div id="pokemonSection" class="aboutMeSection">
+    	<div id="pokemonSectionText">
+    		<img src="icons/pokeball-1.png" class="aboutMeImage"/>
+    		<img src="icons/pokeball-2.png" class="aboutMeImage"/>
+    		<img src="icons/pokeball-1.png" class="aboutMeImage"/>
+    		<img src="icons/pokeball-2.png" class="aboutMeImage"/>
+    		<img src="icons/pokeball-1.png" class="aboutMeImage"/>
+    		<br/><br/>
+    		I love Pokemon Go, and my favorite Pokemon is Gengar
+    	</div>
+    </div>
+    <br/><br/><br/>
+    <div id="travelSection" class="aboutMeSection">
+    	<div id="travelSectionText">
+    		<img src="icons/passport.png" class="aboutMeImage"/>
+    		<img src="icons/japan.png" class="aboutMeImage"/>
+    		<img src="icons/australia.png" class="aboutMeImage"/>
+    		<img src="icons/new-zealand.png" class="aboutMeImage"/>
+    		<br/><br/>
+    		I've travelled to Japan, Australia, and New Zealand!
     	</div>
     </div>
 
