--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
   <head>
     <title>Diane Turpin</title>
     <link href="main.css" rel="stylesheet">
+    <link href="contact.css" rel="stylesheet">
     <script src="main.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="icons/fruit.png"/>
@@ -28,6 +29,43 @@
       </p>
     </div>
 
+    <div id="contactPageContainer">
+      <div id="emailContainer">
+        <img src="icons/email.png" class="contactImage"/>
+        <br/>
+        <b>Email</b>
+        <br/>
+        <a href="mailto:diane.h.turpin@gmail.com" target="_top">diane.h.turpin@gmail.com</a>
+        <br/>
+      </div>
+      <br/><br/>
+      <div id="phoneContainer">
+        <img src="icons/phone.png" class="contactImage"/>
+        <br/>
+        <b>Phone</b>
+        <br/>
+        (860) 716-8183
+        <br/>
+      </div>
+      <br/><br/>
+      <div id="linkedinContainer">
+        <img src="icons/linkedin.png" class="contactImage"/>
+        <br/>
+        <b>LinkedIn</b>
+        <br/>
+        <a href="https://www.linkedin.com/in/diane-turpin-982b0364/">Diane (Hudson) Turpin</a>
+        <br/>
+      </div>
+      <br/><br/>
+      <div id="instagramContainer">
+        <img src="icons/instagram.png" class="contactImage"/>
+        <br/>
+        <b>Instagram</b>
+        <br/>
+        <a href="https://www.instagram.com/dianeturpin15/">@dianeturpin15</a>
+        <br/>
+      </div>
+    </div>
 
     <div id="iconCredit">
       Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
