--- a/experience.html
+++ b/experience.html
@@ -3,7 +3,9 @@
   <head>
     <title>Diane Turpin</title>
     <link href="main.css" rel="stylesheet">
+    <link href="experience.css" rel="stylesheet">
     <script src="main.js"></script>
+    <script src="experience.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="icons/fruit.png"/>
   </head>
@@ -28,6 +30,78 @@
       </p>
     </div>
 
+    <div id="securianFullTimeContainer" class="experienceSection">
+      <div id="securianFullTimeLabel">
+        Securian Financial : Engineering Analyst
+        <a href="javascript:void(0);"><img src="icons/expand.png" class="expandIcon" onclick="toggleExperienceSection('securianFullTimeDetails')"/></a>
+      </div>
+      <div id="securianFullTimeDetails">
+        June 2018 - Present
+        <br/>
+        <ul>
+          <li>
+            Full-stack developer on a Kanban Agile team that supports ten systems, including an enterprise call center, document management system, security administration, and core integration functionality
+          </li>
+          <li>
+            Contribute to several top projects which require integrating with third-party vendors
+          </li>
+          <li>
+            Manage databases containing over fourteen million customer records
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div id="securianInternContainer" class="experienceSection">
+      <div id="securianInternLabel">
+        Securian Financial : Programmer Intern
+        <a href="javascript:void(0);"><img src="icons/expand.png" class="expandIcon" onclick="toggleExperienceSection('securianInternDetails')"/></a>
+      </div>
+      <div id="securianInternDetails">
+        May 2017 - August 2017
+        <br/>
+        <ul>
+          <li>
+            Work as a full-stack developer on a Scrum Agile team that supports an internal settings engine and administrative system
+          </li>
+          <li>
+            Create and maintain web pages using the Spring Model-View-Controller framework
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div id="voyaContainer" class="experienceSection">
+      <div id="voyaLabel">
+        Voya : Web Developer Intern
+        <a href="javascript:void(0);"><img src="icons/expand.png" class="expandIcon" onclick="toggleExperienceSection('voyaDetails')"/></a>
+      </div>
+      <div id="voyaDetails">
+        May 2016 - August 2016
+        <br/>
+        <ul>
+          <li>
+            Contribute as a front-end developer on a Scrum Agile team that supports an external financial services website
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div id="uOfMContainer" class="experienceSection">
+      <div id="uOfMLabel">
+        University of Minnesota : Teaching Assistant
+        <a href="javascript:void(0);"><img src="icons/expand.png" class="expandIcon" onclick="toggleExperienceSection('uOfMDetails')"/></a>
+      </div>
+      <div id="uOfMDetails">
+        January 2015 - May 2018
+        <br/>
+        <ul>
+          <li>
+            Lead and instruct Java and Python programming laboratory sections, hold weekly office hours to offer individualized help, and grade coursework
+          </li>
+        </ul>
+      </div>
+    </div>
 
     <div id="iconCredit">
       Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
