--- a/skills.html
+++ b/skills.html
@@ -3,7 +3,9 @@
   <head>
     <title>Diane Turpin</title>
     <link href="main.css" rel="stylesheet">
+    <link href="skills.css" rel="stylesheet">
     <script src="main.js"></script>
+    <script src="skills.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="icons/fruit.png"/>
   </head>
@@ -26,6 +28,47 @@
       <p>
         <h1>Diane Turpin</h1>
       </p>
+    </div>
+
+    <div id="scrollContainer">
+      <div class="skillsSection" id="languagesSection">
+        <div id="languagesText">
+          <b>Languages</b><br/><br/><i>
+          Java<br/>
+          Python<br/>
+          C<br/>
+          C++<br/>
+          SQL<br/>
+          JavaScript<br/>
+          CSS<br/>
+          HTML<br/>
+          XML<br/></i>
+        </div>
+      </div>
+      <div class="skillsSection" id="frameworksSection">
+        <div id="frameworksText">
+          <b>Frameworks and Servers</b><br/><br/><i>
+          Spring MVC<br/>
+          Spring Boot<br/>
+          TomCat<br/>
+          TC Server<br/>
+        </div>
+      </div>
+      <div class="skillsSection" id="educationSection">
+        <div id="educationText">
+          <b>Education</b><br/><br/><i>
+            Bachelor of Science in Computer Science: <br/>
+            University of Minnesota, College of Science and Engineering <br/>
+            May, 2018 <br/></i>
+        </div>
+      </div>
+      <a href="javascript:void(0);"><img src="icons/backward.png" id="backwardIcon" onclick="scrollExperienceBackwards()"/></a>
+      <div id="navigationCircleContainer">
+        <div id="circleOne"><a href="javascript:void(0);"><img src="icons/selected.png" class="navigationCircle" onclick="navigateToLanguages()"/></a></div>
+        <div id="circleTwo"><a href="javascript:void(0);"><img src="icons/circle.png" class="navigationCircle" onclick="navigateToFrameworks()"/></a></div>
+        <div id="circleThree"><a href="javascript:void(0);"><img src="icons/circle.png" class="navigationCircle" onclick="navigateToEducation()"/></a></div>
+      </div>
+      <a href="javascript:void(0);"><img src="icons/forward.png" id="forwardIcon" onclick="scrollExperience()"/></a>
     </div>
 
 
