--- a/skills.html
+++ b/skills.html
@@ -51,7 +51,7 @@
           Spring MVC<br/>
           Spring Boot<br/>
           TomCat<br/>
-          TC Server<br/>
+          TC Server<br/></i>
         </div>
       </div>
       <div class="skillsSection" id="educationSection">
